# serializer version: 1
# name: test_creating_request[args0-create_movie_request.json-json0]
  dict({
    'created_at': datetime.datetime(2025, 1, 3, 8, 22, 1, tzinfo=datetime.timezone.utc),
    'id': 22,
    'is4k': False,
    'media': dict({
      'created_at': datetime.datetime(2025, 1, 3, 8, 22, 1, tzinfo=datetime.timezone.utc),
      'id': 543,
      'imdb_id': None,
      'media_type': <MediaType.MOVIE: 'movie'>,
      'status': <MediaStatus.PENDING: 2>,
      'tmdb_id': 402431,
      'tvdb_id': None,
      'updated_at': datetime.datetime(2025, 1, 3, 8, 22, 1, tzinfo=datetime.timezone.utc),
    }),
    'modified_by': dict({
      'avatar': 'https://plex.tv/users/aaaa/avatar?c=aaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'aaaaaa',
      'email': 'some@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 43972689,
      'plex_username': 'aaaaaa',
      'request_count': 15,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'requested_by': dict({
      'avatar': 'https://plex.tv/users/aaaa/avatar?c=aaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'aaaaaa',
      'email': 'some@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 43972689,
      'plex_username': 'aaaaaa',
      'request_count': 15,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'season_count': None,
    'status': <RequestStatus.APPROVED: 2>,
    'updated_at': datetime.datetime(2025, 1, 3, 8, 22, 1, tzinfo=datetime.timezone.utc),
  })
# ---
# name: test_creating_request[args1-create_tv_request.json-json1]
  dict({
    'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
    'id': 14,
    'is4k': False,
    'media': dict({
      'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
      'id': 535,
      'imdb_id': None,
      'media_type': <MediaType.TV: 'tv'>,
      'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
      'tmdb_id': 249522,
      'tvdb_id': 447806,
      'updated_at': datetime.datetime(2024, 12, 26, 14, 45, tzinfo=datetime.timezone.utc),
    }),
    'modified_by': dict({
      'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'somebody',
      'email': 'one@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 321321321,
      'plex_username': 'somebody',
      'request_count': 11,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'requested_by': dict({
      'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'somebody',
      'email': 'one@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 321321321,
      'plex_username': 'somebody',
      'request_count': 11,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'season_count': 1,
    'status': <RequestStatus.APPROVED: 2>,
    'updated_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
  })
# ---
# name: test_creating_request[args2-create_tv_request.json-json2]
  dict({
    'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
    'id': 14,
    'is4k': False,
    'media': dict({
      'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
      'id': 535,
      'imdb_id': None,
      'media_type': <MediaType.TV: 'tv'>,
      'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
      'tmdb_id': 249522,
      'tvdb_id': 447806,
      'updated_at': datetime.datetime(2024, 12, 26, 14, 45, tzinfo=datetime.timezone.utc),
    }),
    'modified_by': dict({
      'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'somebody',
      'email': 'one@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 321321321,
      'plex_username': 'somebody',
      'request_count': 11,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'requested_by': dict({
      'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
      'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
      'display_name': 'somebody',
      'email': 'one@email.com',
      'id': 1,
      'movie_quota_days': None,
      'movie_quota_limit': None,
      'plex_id': 321321321,
      'plex_username': 'somebody',
      'request_count': 11,
      'tv_quota_days': None,
      'tv_quota_limit': None,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
    }),
    'season_count': 1,
    'status': <RequestStatus.APPROVED: 2>,
    'updated_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
  })
# ---
# name: test_data_retrieval[request_count]
  dict({
    'approved': 11,
    'available': 8,
    'declined': 0,
    'movie': 9,
    'pending': 0,
    'processing': 3,
    'total': 11,
    'tv': 2,
  })
# ---
# name: test_data_retrieval[issue_count]
  dict({
    'audio': 0,
    'closed': 0,
    'open': 0,
    'others': 0,
    'subtitles': 0,
    'total': 0,
    'video': 0,
  })
# ---
# name: test_data_retrieval[status]
  dict({
    'commits_behind': 0,
    'restart_required': False,
    'update_available': False,
    'version': 'develop-local',
  })
# ---
# name: test_data_retrieval[watchlist]
  list([
    dict({
      'media_type': <MediaType.MOVIE: 'movie'>,
      'rating_key': 'aaaa',
      'title': 'Sonic the Hedgehog 3',
      'tmdb_id': 939243,
    }),
    dict({
      'media_type': <MediaType.MOVIE: 'movie'>,
      'rating_key': 'bbbb',
      'title': 'Superbad',
      'tmdb_id': 8363,
    }),
    dict({
      'media_type': <MediaType.TV: 'tv'>,
      'rating_key': 'cccc',
      'title': 'The Legend of Korra',
      'tmdb_id': 33880,
    }),
  ])
# ---
# name: test_data_retrieval[webhook_config]
  dict({
    'enabled': True,
    'options': dict({
      'json_payload': '''
        {
          "notification_type": "{{notification_type}}",
          "event": "{{event}}",
          "subject": "{{subject}}",
          "message": "{{message}}",
          "image": "{{image}}",
          "{{media}}": {
            "media_type": "{{media_type}}",
            "tmdbId": "{{media_tmdbid}}",
            "tvdbId": "{{media_tvdbid}}",
            "status": "{{media_status}}",
            "status4k": "{{media_status4k}}"
          },
          "{{request}}": {
            "request_id": "{{request_id}}",
            "requestedBy_email": "{{requestedBy_email}}",
            "requestedBy_username": "{{requestedBy_username}}",
            "requestedBy_avatar": "{{requestedBy_avatar}}",
            "requestedBy_settings_discordId": "{{requestedBy_settings_discordId}}",
            "requestedBy_settings_telegramChatId": "{{requestedBy_settings_telegramChatId}}"
          },
          "{{issue}}": {
            "issue_id": "{{issue_id}}",
            "issue_type": "{{issue_type}}",
            "issue_status": "{{issue_status}}",
            "reportedBy_email": "{{reportedBy_email}}",
            "reportedBy_username": "{{reportedBy_username}}",
            "reportedBy_avatar": "{{reportedBy_avatar}}",
            "reportedBy_settings_discordId": "{{reportedBy_settings_discordId}}",
            "reportedBy_settings_telegramChatId": "{{reportedBy_settings_telegramChatId}}"
          },
          "{{comment}}": {
            "comment_message": "{{comment_message}}",
            "commentedBy_email": "{{commentedBy_email}}",
            "commentedBy_username": "{{commentedBy_username}}",
            "commentedBy_avatar": "{{commentedBy_avatar}}",
            "commentedBy_settings_discordId": "{{commentedBy_settings_discordId}}",
            "commentedBy_settings_telegramChatId": "{{commentedBy_settings_telegramChatId}}"
          },
          "{{extra}}": []
        }
      ''',
      'webhook_url': 'https://test.test.nl',
    }),
    'types': <NotificationType.REQUEST_PENDING_APPROVAL|REQUEST_APPROVED|REQUEST_AVAILABLE|REQUEST_PROCESSING_FAILED|REQUEST_DECLINED|REQUEST_AUTOMATICALLY_APPROVED|ISSUE_REPORTED|ISSUE_COMMENT|ISSUE_RESOLVED|ISSUE_REOPENED: 4062>,
  })
# ---
# name: test_fetching_movie_details
  dict({
    'adult': False,
    'budget': 0,
    'genres': list([
      dict({
        'id': 10749,
        'name': 'Romance',
      }),
      dict({
        'id': 18,
        'name': 'Drama',
      }),
    ]),
    'id': 1156593,
    'imdb_id': 'tt28510079',
    'keywords': list([
      dict({
        'id': 818,
        'name': 'based on novel or book',
      }),
      dict({
        'id': 9663,
        'name': 'sequel',
      }),
    ]),
    'media_info': dict({
      'created_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
      'id': 537,
      'imdb_id': None,
      'media_type': <MediaType.MOVIE: 'movie'>,
      'requests': list([
        dict({
          'created_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
          'id': 16,
          'is4k': False,
          'modified_by': dict({
            'avatar': 'https://plex.tv/users/aaaaaaa/avatar?c=aaaaaaa',
            'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
            'display_name': 'somebody',
            'email': 'me@email.com',
            'id': 1,
            'movie_quota_days': None,
            'movie_quota_limit': None,
            'plex_id': 43972689,
            'plex_username': 'somebody',
            'request_count': 11,
            'tv_quota_days': None,
            'tv_quota_limit': None,
            'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
          }),
          'requested_by': dict({
            'avatar': 'https://plex.tv/users/aaaaaaa/avatar?c=aaaaaaa',
            'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
            'display_name': 'somebody',
            'email': 'me@email.com',
            'id': 1,
            'movie_quota_days': None,
            'movie_quota_limit': None,
            'plex_id': 43972689,
            'plex_username': 'somebody',
            'request_count': 11,
            'tv_quota_days': None,
            'tv_quota_limit': None,
            'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
          }),
          'season_count': 0,
          'status': <RequestStatus.APPROVED: 2>,
          'updated_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
        }),
      ]),
      'status': <MediaStatus.PROCESSING: 3>,
      'tmdb_id': 1156593,
      'tvdb_id': None,
      'updated_at': datetime.datetime(2024, 12, 29, 10, 4, 17, tzinfo=datetime.timezone.utc),
    }),
    'original_language': 'es',
    'original_title': 'Culpa tuya',
    'overview': "The love between Noah and Nick seems unwavering despite their parents' attempts to separate them. But his job and her entry into college open up their lives to new relationships that will shake the foundations of both their relationship and the Leister family itself.",
    'popularity': 3958.479,
    'release_date': datetime.date(2024, 12, 26),
    'revenue': 0,
    'runtime': 120,
    'tagline': 'Divided by family. Driven by love.',
    'title': 'Your Fault',
    'vote_average': 7.7,
    'vote_count': 190,
  })
# ---
# name: test_fetching_requests
  list([
    dict({
      'created_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
      'id': 16,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
        'id': 537,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.PROCESSING: 3>,
        'tmdb_id': 1156593,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 29, 10, 4, 17, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 29, 10, 4, 16, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 28, 14, 19, 34, tzinfo=datetime.timezone.utc),
      'id': 15,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 28, 14, 19, 34, tzinfo=datetime.timezone.utc),
        'id': 536,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 1010581,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 28, 14, 30, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 28, 14, 19, 34, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
      'id': 14,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
        'id': 535,
        'imdb_id': None,
        'media_type': <MediaType.TV: 'tv'>,
        'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
        'tmdb_id': 249522,
        'tvdb_id': 447806,
        'updated_at': datetime.datetime(2024, 12, 26, 14, 45, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 1,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 24, 21, 13, 40, tzinfo=datetime.timezone.utc),
      'id': 13,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 24, 21, 13, 40, tzinfo=datetime.timezone.utc),
        'id': 534,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 1290287,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 24, 21, 20, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 24, 21, 13, 40, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 17, 12, 11, 17, tzinfo=datetime.timezone.utc),
      'id': 12,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 17, 12, 11, 17, tzinfo=datetime.timezone.utc),
        'id': 533,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 10428,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 17, 12, 25, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 17, 12, 11, 17, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 16, 23, 59, 55, tzinfo=datetime.timezone.utc),
      'id': 11,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 16, 23, 59, 55, tzinfo=datetime.timezone.utc),
        'id': 532,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 562,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 17, 0, 5, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 55, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 16, 22, 58, 17, tzinfo=datetime.timezone.utc),
      'id': 10,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 16, 22, 58, 17, tzinfo=datetime.timezone.utc),
        'id': 531,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 845781,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 5, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 16, 22, 58, 17, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 16, 22, 38, 29, tzinfo=datetime.timezone.utc),
      'id': 9,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 16, 21, 15, 14, tzinfo=datetime.timezone.utc),
        'id': 439,
        'imdb_id': None,
        'media_type': <MediaType.TV: 'tv'>,
        'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
        'tmdb_id': 94605,
        'tvdb_id': 371028,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 45, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaaaaaa/avatar?c=aaaaaaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 22, 31, 8, tzinfo=datetime.timezone.utc),
        'display_name': 'else',
        'email': 'other@email.com',
        'id': 3,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 123123,
        'plex_username': 'else',
        'request_count': 2,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 31, 8, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 1,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 16, 22, 39, 53, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 16, 22, 37, 35, tzinfo=datetime.timezone.utc),
      'id': 8,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 16, 22, 37, 35, tzinfo=datetime.timezone.utc),
        'id': 530,
        'imdb_id': None,
        'media_type': <MediaType.TV: 'tv'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 69629,
        'tvdb_id': 328552,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 55, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/aaaaaaaaa/avatar?c=aaaaaaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 22, 31, 8, tzinfo=datetime.timezone.utc),
        'display_name': 'else',
        'email': 'other@email.com',
        'id': 3,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 123123,
        'plex_username': 'else',
        'request_count': 2,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 31, 8, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 2,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 16, 22, 41, 1, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'created_at': datetime.datetime(2024, 12, 16, 22, 7, 45, tzinfo=datetime.timezone.utc),
      'id': 7,
      'is4k': False,
      'media': dict({
        'created_at': datetime.datetime(2024, 12, 16, 22, 4, 7, tzinfo=datetime.timezone.utc),
        'id': 529,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 884605,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 20, tzinfo=datetime.timezone.utc),
      }),
      'modified_by': dict({
        'avatar': 'https://plex.tv/users/aaaaa/avatar?c=aaaaa',
        'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
        'display_name': 'somebody',
        'email': 'one@email.com',
        'id': 1,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 321321321,
        'plex_username': 'somebody',
        'request_count': 11,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
      }),
      'requested_by': dict({
        'avatar': 'https://plex.tv/users/bvbbbbb/avatar?c=bbbbbb',
        'created_at': datetime.datetime(2024, 12, 16, 22, 0, 12, tzinfo=datetime.timezone.utc),
        'display_name': 'bbbbb',
        'email': 'yes@gmail.com',
        'id': 2,
        'movie_quota_days': None,
        'movie_quota_limit': None,
        'plex_id': 234234234234,
        'plex_username': 'yestest',
        'request_count': 1,
        'tv_quota_days': None,
        'tv_quota_limit': None,
        'updated_at': datetime.datetime(2024, 12, 16, 22, 0, 12, tzinfo=datetime.timezone.utc),
      }),
      'season_count': 0,
      'status': <RequestStatus.APPROVED: 2>,
      'updated_at': datetime.datetime(2024, 12, 16, 22, 8, 5, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_fetching_tv_details
  dict({
    'first_air_date': datetime.date(2024, 12, 19),
    'genres': list([
      dict({
        'id': 10764,
        'name': 'Reality',
      }),
    ]),
    'id': 249522,
    'keywords': list([
      dict({
        'id': 271,
        'name': 'competition',
      }),
      dict({
        'id': 4325,
        'name': 'game show',
      }),
      dict({
        'id': 330122,
        'name': 'mrbeast',
      }),
    ]),
    'languages': list([
      'da',
      'en',
    ]),
    'last_air_date': datetime.date(2024, 12, 26),
    'last_episode_to_air': dict({
      'air_date': datetime.date(2024, 12, 26),
      'episode_number': 3,
      'id': 5802152,
      'name': 'The Solitary Experiment',
      'overview': 'What would happen if three best friends were trapped in a room, but only two could escape? Watch and see for yourself right now!',
      'still_path': '/r6LRRaA2l2tMDttWbYl3dXdJUij.jpg',
    }),
    'media_info': dict({
      'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
      'id': 535,
      'imdb_id': None,
      'media_type': <MediaType.TV: 'tv'>,
      'requests': list([
        dict({
          'created_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
          'id': 14,
          'is4k': False,
          'modified_by': dict({
            'avatar': 'https://plex.tv/users/123123/avatar?c=123123',
            'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
            'display_name': 'somebody',
            'email': 'me@email.com',
            'id': 1,
            'movie_quota_days': None,
            'movie_quota_limit': None,
            'plex_id': 123123,
            'plex_username': 'somebody',
            'request_count': 11,
            'tv_quota_days': None,
            'tv_quota_limit': None,
            'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
          }),
          'requested_by': dict({
            'avatar': 'https://plex.tv/users/123123/avatar?c=123123',
            'created_at': datetime.datetime(2024, 12, 16, 21, 13, 58, tzinfo=datetime.timezone.utc),
            'display_name': 'somebody',
            'email': 'me@email.com',
            'id': 1,
            'movie_quota_days': None,
            'movie_quota_limit': None,
            'plex_id': 123123,
            'plex_username': 'somebody',
            'request_count': 11,
            'tv_quota_days': None,
            'tv_quota_limit': None,
            'updated_at': datetime.datetime(2024, 12, 16, 23, 59, 3, tzinfo=datetime.timezone.utc),
          }),
          'season_count': 1,
          'status': <RequestStatus.APPROVED: 2>,
          'updated_at': datetime.datetime(2024, 12, 26, 14, 37, 30, tzinfo=datetime.timezone.utc),
        }),
      ]),
      'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
      'tmdb_id': 249522,
      'tvdb_id': 447806,
      'updated_at': datetime.datetime(2024, 12, 26, 14, 45, tzinfo=datetime.timezone.utc),
    }),
    'name': 'Beast Games',
    'next_episode_to_air': dict({
      'air_date': datetime.date(2025, 1, 2),
      'episode_number': 4,
      'id': 5802153,
      'name': 'Episode 4',
      'overview': '',
      'still_path': 'None',
    }),
    'number_of_episodes': 10,
    'number_of_seasons': 1,
    'original_language': 'en',
    'original_name': 'Beast Games',
    'overview': "I gathered 1,000 people to fight for $5,000,000, the LARGEST cash prize in TV history! We're also giving away a private island, Lamborghinis, and millions more in cash throughout the competition! Go watch to see the greatest show ever made!",
    'popularity': 769.189,
    'seasons': list([
      dict({
        'air_date': datetime.date(2024, 12, 19),
        'episode_count': 10,
        'id': 384427,
        'name': 'Season 1',
        'overview': '',
        'poster_path': '/3itZlypnOcVcqI5xxyO6nvJ52yM.jpg',
        'season_number': 1,
      }),
    ]),
    'tagline': '1,000 players. 5 million dollars. 1 winner.',
  })
# ---
# name: test_search[search_1.json]
  list([
    dict({
      'adult': False,
      'id': 605521,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Frosty',
      'overview': '“I need to run because I love having that connection to nature,” says ultra-runner Anna Frost, who’s been racking up competitive wins for more than a decade. After being consumed with running for years, Frost takes on a new challenge. This film follows the endurance athlete from podium to motherhood.',
      'popularity': 0.001,
      'title': 'Frosty',
    }),
    dict({
      'adult': False,
      'id': 1290287,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': dict({
        'created_at': datetime.datetime(2024, 12, 24, 21, 13, 40, tzinfo=datetime.timezone.utc),
        'id': 534,
        'imdb_id': None,
        'media_type': <MediaType.MOVIE: 'movie'>,
        'status': <MediaStatus.AVAILABLE: 5>,
        'tmdb_id': 1290287,
        'tvdb_id': None,
        'updated_at': datetime.datetime(2024, 12, 24, 21, 20, tzinfo=datetime.timezone.utc),
      }),
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Hot Frosty',
      'overview': "When a young widow's magic scarf brings a dashing snowman to life, can he help her rediscover romance, laughter and holiday cheer before he melts away?",
      'popularity': 87.462,
      'title': 'Hot Frosty',
    }),
    dict({
      'adult': False,
      'id': 1828978,
      'known_for': list([
        dict({
          'adult': False,
          'id': 535,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Flashdance',
          'overview': 'Alex Owens, a young woman juggling between two odd jobs, aspires to become a successful ballet dancer. Nick, who is her boss and lover, supports and encourages her to fulfil her dream.',
          'popularity': 22.254,
          'title': 'Flashdance',
        }),
        dict({
          'adult': False,
          'id': 67361,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'The Freshest Kids',
          'overview': 'From the Boogie Down Bronx and beyond, the history of the b-boy.',
          'popularity': 0.505,
          'title': 'The Freshest Kids',
        }),
      ]),
      'mediaType': <ResultMediaType.PERSON: 'person'>,
      'media_type': <ResultMediaType.PERSON: 'person'>,
      'name': "Wayne 'Frosty Freeze' Frost",
      'popularity': 0.611,
    }),
    dict({
      'adult': False,
      'id': 1414554,
      'known_for': list([
        dict({
          'adult': False,
          'id': 18785,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'The Hangover',
          'overview': "When three friends finally come to after a raucous night of bachelor-party revelry, they find a baby in the closet and a tiger in the bathroom. But they can't seem to locate their best friend, Doug – who's supposed to be tying the knot. Launching a frantic search for Doug, the trio perseveres through a nasty hangover to try to make it to the church on time.",
          'popularity': 90.836,
          'title': 'The Hangover',
        }),
        dict({
          'adult': False,
          'id': 119450,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Dawn of the Planet of the Apes',
          'overview': 'A group of scientists in San Francisco struggle to stay alive in the aftermath of a plague that is wiping out humanity, while Caesar tries to maintain dominance over his community of intelligent apes.',
          'popularity': 61.855,
          'title': 'Dawn of the Planet of the Apes',
        }),
        dict({
          'adult': False,
          'id': 58574,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Sherlock Holmes: A Game of Shadows',
          'overview': 'There is a new criminal mastermind at large (Professor Moriarty) and not only is he Holmes’ intellectual equal, but his capacity for evil and lack of conscience may give him an advantage over the  detective.',
          'popularity': 34.481,
          'title': 'Sherlock Holmes: A Game of Shadows',
        }),
      ]),
      'mediaType': <ResultMediaType.PERSON: 'person'>,
      'media_type': <ResultMediaType.PERSON: 'person'>,
      'name': 'Craig Frosty Silva',
      'popularity': 0.43,
    }),
    dict({
      'adult': False,
      'id': 28042,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Frosty Returns',
      'overview': "Mr. Twitchell, a greedy old businessman, has invented Summer Wheeze: a spray that instantly removes snow and slush! Now Holly has to keep Frosty from melting, and convince everybody that snow's actually a good thing.",
      'popularity': 7.677,
      'title': 'Frosty Returns',
    }),
    dict({
      'adult': False,
      'id': 1300131,
      'known_for': list([
        dict({
          'adult': False,
          'id': 967,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Spartacus',
          'overview': 'The rebellious Thracian Spartacus, born and raised a slave, is sold to Gladiator trainer Batiatus. After weeks of being trained to kill for the arena, Spartacus turns on his owners and leads the other slaves in rebellion. As the rebels move from town to town, their numbers swell as escaped slaves join their ranks. Under the leadership of Spartacus, they make their way to southern Italy, where they will cross the sea and return to their homes.',
          'popularity': 37.881,
          'title': 'Spartacus',
        }),
        dict({
          'adult': False,
          'id': 18264,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'The Man from Laramie',
          'overview': 'Will Lockhart arrives in Coronado, an isolated town in New Mexico, in search of someone who sells rifles to the Apache tribe, finding himself unwillingly drawn into the convoluted life of a local ranching family whose members seem to have a lot to hide.',
          'popularity': 13.317,
          'title': 'The Man from Laramie',
        }),
        dict({
          'adult': False,
          'id': 28484,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Colorado Territory',
          'overview': 'After escaping from jail, outlaw Wes McQueen is convinced by his old partner in crime to do one last heist.',
          'popularity': 5.99,
          'title': 'Colorado Territory',
        }),
      ]),
      'mediaType': <ResultMediaType.PERSON: 'person'>,
      'media_type': <ResultMediaType.PERSON: 'person'>,
      'name': 'Frosty Royce',
      'popularity': 0.355,
    }),
    dict({
      'adult': False,
      'id': 26539,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': "Frosty's Winter Wonderland",
      'overview': 'Years have passed since Frosty left for the North Pole, but his promise is kept when he hears news of the first snowfall of the season, and decides to return.',
      'popularity': 10.095,
      'title': "Frosty's Winter Wonderland",
    }),
    dict({
      'adult': False,
      'id': 13675,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Frosty the Snowman',
      'overview': 'A discarded silk top-hat becomes the focus of a struggle between a washed-up stage magician and a group of schoolchildren, after it magically brings a snowman to life. Realizing that newly-living Frosty will melt in spring unless he takes refuge in a colder climate, Frosty and Karen, a young girl who he befriends, stow away on a freight train headed for the north pole. Little do they know that the magician is following them, and he wants his hat back!',
      'popularity': 20.297,
      'title': 'Frosty the Snowman',
    }),
    dict({
      'adult': False,
      'id': 40246,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': "Rudolph and Frosty's Christmas in July",
      'overview': 'Winterbolt is trying to make the North Pole his evil wonderland, and it is up to Frosty the Snowman, Rudolph the Red-Nosed Reindeer and others to stop him.',
      'popularity': 6.946,
      'title': "Rudolph and Frosty's Christmas in July",
    }),
    dict({
      'adult': False,
      'id': 1393660,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Hot Frosty 2024 - Afdah',
      'overview': "Hot Frosty 2024 is a pleasant surprise among holiday romances. The film goes beyond what you would expect from a film in this genre, turning a potentially silly premise into a complex look at grief, love, and magical second chances. Lacey Chabert and Dustin Milligan's captivating chemistry, clever script, and true emotional depth turn a potentially forgotten idea into a memorable one. The film skillfully combines funny and touching moments to create a unique story that shows how complicated relationships can be. Unlike other holiday movies, it combines magic with a moving true story.",
      'popularity': 0.537,
      'title': 'Hot Frosty 2024 - Comedy, Romance, Fantasy',
    }),
    dict({
      'adult': False,
      'id': 5070012,
      'known_for': list([
        dict({
          'adult': False,
          'id': 1390475,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'All the Little Things',
          'overview': 'An accomplished molecular biologist moves out of the lab in a quest to make an encyclopedia documenting all the fruit fly species in North America.',
          'popularity': 2.353,
          'title': 'All the Little Things',
        }),
      ]),
      'mediaType': <ResultMediaType.PERSON: 'person'>,
      'media_type': <ResultMediaType.PERSON: 'person'>,
      'name': 'Frosty/Misty',
      'popularity': 0.001,
    }),
    dict({
      'adult': False,
      'id': 1357698,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Rudolph, Frosty & Friends Sing Along',
      'overview': 'Ten Musical Yuletide treasures featuring the voices of Fred Astaire, Jimmy Durante and Burl Ives. Create A tuneful new family tradition with this festive, fun-to-follow sing along!',
      'popularity': 1.55,
      'title': 'The Rudolph, Frosty & Friends Sing Along',
    }),
    dict({
      'adult': False,
      'id': 953871,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'ru',
      'original_title': 'А над Тунгуской морозный стелется туман...',
      'overview': 'On the shore of the Podkamennaya Tunguska, in harsh northern conditions, the Kto people live, the keeper of a special way of life, traditions and rituals.',
      'popularity': 0.005,
      'title': 'And Over Tunguska Frosty Fog Spreads',
    }),
    dict({
      'adult': False,
      'id': 845524,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'lv',
      'original_title': 'Sarmītes',
      'overview': 'In the mid – 1960’s, Latvia was a part of the Soviet Union. People lived identical lives, listened to the same radio stations. Children wore the same boots and ate the same porridge every morning. Only their dreams and desires for something different set them apart from each other. For little Dace this is a moment, where stand still of childhood’s happiness turns into time for growing up.  "A fulfilled expression of Beauty in the passage of Life." (Dmitry Rancev, "The Independent", Latvia)  "Competent and Spartan…" (Jan Ingman, catalogue of "Stockholm IFF")',
      'popularity': 0.426,
      'title': 'Frosty Flowers',
    }),
    dict({
      'adult': False,
      'id': 433229,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Jadeh-haye Sard',
      'overview': "Moosavi, a country schoolteacher, must undertake an arduous journey to fetch medicine for his village's sick. Accompanied by his student and a villager, he travels through a blizzard and is pursued by a pack of hungry wolves.",
      'popularity': 0.001,
      'title': 'Frosty Roads',
    }),
    dict({
      'adult': False,
      'id': 1002270,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'zh',
      'original_title': '月落烏啼霜滿天',
      'overview': "Loosely based on Maxim Gorky's The Lower Depths",
      'popularity': 0.746,
      'title': 'The Frosty Night',
    }),
    dict({
      'adult': False,
      'id': 441986,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'ru',
      'original_title': 'Морозный узор',
      'overview': 'How Morozik decorated a rainy day with sparkling snow.',
      'popularity': 0.001,
      'title': 'Frosty Pattern',
    }),
  ])
# ---
# name: test_search[search_2.json]
  list([
    dict({
      'first_air_date': datetime.date(2014, 7, 13),
      'id': 47640,
      'mediaType': <ResultMediaType.TV: 'tv'>,
      'media_info': dict({
        'created_at': datetime.datetime(2024, 12, 16, 21, 15, 21, tzinfo=datetime.timezone.utc),
        'id': 503,
        'imdb_id': None,
        'media_type': <MediaType.TV: 'tv'>,
        'status': <MediaStatus.PARTIALLY_AVAILABLE: 4>,
        'tmdb_id': 47640,
        'tvdb_id': 276564,
        'updated_at': datetime.datetime(2024, 12, 16, 21, 15, 21, tzinfo=datetime.timezone.utc),
      }),
      'media_type': <ResultMediaType.TV: 'tv'>,
      'name': 'The Strain',
      'original_language': 'en',
      'original_name': 'The Strain',
      'overview': 'A high concept thriller that tells the story of Dr. Ephraim Goodweather, the head of the Center for Disease Control Canary Team in New York City. He and his team are called upon to investigate a mysterious viral outbreak with hallmarks of an ancient and evil strain of vampirism. As the strain spreads, Eph, his team, and an assembly of everyday New Yorkers, wage war for the fate of humanity itself.',
      'popularity': 284.215,
    }),
    dict({
      'first_air_date': datetime.date(2008, 5, 26),
      'id': 19997,
      'mediaType': <ResultMediaType.TV: 'tv'>,
      'media_info': None,
      'media_type': <ResultMediaType.TV: 'tv'>,
      'name': 'The Andromeda Strain',
      'original_language': 'en',
      'original_name': 'The Andromeda Strain',
      'overview': 'A U.S. satellite crash-lands near a small town in Utah, unleashing a deadly plague that kills virtually everyone except two survivors, who may provide clues to immunizing the population. As the military attempts to quarantine the area, a team of highly specialized scientists is assembled to find a cure and stop the spread of the alien pathogen, code-named Andromeda.',
      'popularity': 38.794,
    }),
    dict({
      'first_air_date': datetime.date(2014, 7, 13),
      'id': 272184,
      'mediaType': <ResultMediaType.TV: 'tv'>,
      'media_info': None,
      'media_type': <ResultMediaType.TV: 'tv'>,
      'name': 'The Strain',
      'original_language': 'es',
      'original_name': 'The Strain',
      'overview': '',
      'popularity': 0.006,
    }),
    dict({
      'adult': False,
      'id': 10514,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Andromeda Strain',
      'overview': "When virtually all of the residents of Piedmont, New Mexico, are found dead after the return to Earth of a space satellite, the head of the US Air Force's Project Scoop declares an emergency. A group of eminent scientists led by Dr. Jeremy Stone scramble to a secure laboratory and try to first isolate the life form while determining why two people from Piedmont - an old alcoholic and a six-month-old baby - survived. The scientists methodically study the alien life form unaware that it has already mutated and presents a far greater danger in the lab, which is equipped with a nuclear self-destruct device designed to prevent the escape of dangerous biological agents.",
      'popularity': 16.612,
      'title': 'The Andromeda Strain',
    }),
    dict({
      'adult': False,
      'id': 962613,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Terra Incognita: Making the Andromeda Strain',
      'overview': 'A behind the scenes look at the background and making of the 2008 TV mini-series',
      'popularity': 2.258,
      'title': 'Terra Incognita: Making the Andromeda Strain',
    }),
    dict({
      'adult': False,
      'id': 73101,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'fr',
      'original_title': 'The Killing Strain',
      'overview': "A man-made virus, 'The Killing Strain'-- an out-of-control swine flu-- turns infected humans into raging monsters. As it rapidly spreads, a group of uninfected survivors must make life-or-death decisions before the U.S. military firebombs the area in a desperate attempt contain the contagion. The survivors are unaware that the virus has already reached their group-- by infecting one of them-- and now the merciless metamorphic process has begun.",
      'popularity': 1.021,
      'title': 'The Killing Strain',
    }),
    dict({
      'adult': False,
      'id': 1074431,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Andromeda Strain: Making the Film',
      'overview': 'The making of "The Andromeda Strain".',
      'popularity': 0.979,
      'title': 'The Andromeda Strain: Making the Film',
    }),
    dict({
      'adult': False,
      'id': 291952,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Racing Strain',
      'overview': 'Lucille Cameron, the spirited daughter of a Kentucky colonel, discovers that her father is nearly bankrupt as a result of his dealings with New York horseman and stock promoter Jim De Luce....',
      'popularity': 0.158,
      'title': 'The Racing Strain',
    }),
    dict({
      'adult': False,
      'id': 982014,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Wild Strain',
      'overview': "Although the prominent Hollywood family prides itself on its illustrious family tree, young Winifred Hollywood exhibits a fondness for wild adventures that greatly disturbs her parents. When Winifred becomes engaged to bank official Harold Burton, his equally snobbish parents visit the Hollywood home and are shocked by the young woman's spirited outbursts and mischievous tricks, and the engagement is broken after she decides to perform bareback feats with a traveling circus.",
      'popularity': 0.179,
      'title': 'The Wild Strain',
    }),
    dict({
      'adult': False,
      'id': 159423,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Racing Strain',
      'overview': 'A race-car driver whose career is on the skids because of his drinking falls for a rich society girl. That motivates him to clean up his act and resume his career, but it may be too late for that.',
      'popularity': 1.441,
      'title': 'The Racing Strain',
    }),
    dict({
      'adult': False,
      'id': 622790,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Golden Strain',
      'overview': "Lt. Milt Mulford graduates from West Point and is assigned to a cavalry outpost in the West, near an Apache reservation. One day the Apaches, tired of being cheated by a crooked Indian agent, break the reservation and Mulford is sent after them with a patrol. Unfortunately, he cracks under the pressure of his first firefight, and is thrown out of the army. His fiancé, disgusted, ends their engagement. He sets out to prove that he is not a coward and regain his fiancé's love.",
      'popularity': 0.564,
      'title': 'The Golden Strain',
    }),
    dict({
      'adult': False,
      'id': 1040917,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'sh',
      'original_title': 'Plemeniti soj',
      'overview': 'Short animated film.',
      'popularity': 0.238,
      'title': 'The Noble Strain',
    }),
    dict({
      'adult': False,
      'id': 223061,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Missouri Strain',
      'overview': 'A family threatened by a nationwide biological apocalypse flees everyday city life to survive.',
      'popularity': 0.298,
      'title': 'The Missouri Strain',
    }),
    dict({
      'adult': False,
      'id': 243291,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Winning Strain',
      'overview': 'A 1966 short documentary showing athletes in action at the 1966 National Amateur Athletic Union track carnival in New York. The film was nominated for an Oscar for Best Live Action Short Film.',
      'popularity': 0.347,
      'title': 'The Winning Strain',
    }),
    dict({
      'adult': False,
      'id': 526388,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Warrior Strain',
      'overview': "An Earl's cadet son stops a German baron from planting wireless-controlled signals at Brighton.",
      'popularity': 0.442,
      'title': 'The Warrior Strain',
    }),
    dict({
      'adult': False,
      'id': 938337,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'The Iron Strain',
      'overview': 'The story is set in Alaska, where spoiled and pampered heiress Octavia Van Ness has come for her health. Here she meets \'Chuck\' Hemingway, who despite his rough exterior is likewise a child of wealth, and a Yale graduate to boot. When Van Ness violently rejects his romantic overtures, Hemingway turns to an old Indian chum for advice. The Indian suggests rather chauvinistically that the way to win a headstrong girl is to "tame" her -- that is, treat \'er rough and make \'er like it.',
      'popularity': 0.442,
      'title': 'The Iron Strain',
    }),
    dict({
      'adult': False,
      'id': 80116,
      'known_for': list([
        dict({
          'adult': False,
          'id': 67395,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'L.E.T.H.A.L. Ladies: Return to Savage Beach',
          'overview': "A stolen computer disk contains the location of a hidden tresaure trove. It's up to the sexy ladies of LETHAL (Legion to Ensure Total Harmony and Law) to find the treasure before the bad guys do.",
          'popularity': 34.91,
          'title': 'L.E.T.H.A.L. Ladies: Return to Savage Beach',
        }),
        dict({
          'adult': False,
          'id': 16225,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Heavy Metal 2000',
          'overview': "Upon discovery of a shard of what could be the Loc-Nar, a miner named Tyler becomes possessed with an insatiable hunger for power and a thirst for immortality. On his way to the planet of youth, Tyler wipes out most of a space colony and kidnaps a beautiful young woman. His only mistake is that he doesn't kill her sister, Julie, who then sets out on a mission of rescue and revenge.",
          'popularity': 12.815,
          'title': 'Heavy Metal 2000',
        }),
        dict({
          'adult': False,
          'id': 9594,
          'mediaType': <ResultMediaType.MOVIE: 'movie'>,
          'media_info': None,
          'media_type': <ResultMediaType.MOVIE: 'movie'>,
          'original_language': 'en',
          'original_title': 'Double Impact',
          'overview': 'Jean Claude Van Damme plays a dual role as Alex and Chad, twins separated at the death of their parents. Chad is raised by a family retainer in Paris, Alex becomes a petty crook in Hong Kong. Seeing a picture of Alex, Chad rejoins him and convinces him that his rival in Hong Kong is also the man who killed their parents. Alex is suspicious of Chad, especially when it comes to his girlfriend.',
          'popularity': 33.319,
          'title': 'Double Impact',
        }),
      ]),
      'mediaType': <ResultMediaType.PERSON: 'person'>,
      'media_type': <ResultMediaType.PERSON: 'person'>,
      'name': 'Julie Strain',
      'popularity': 14.373,
    }),
    dict({
      'adult': False,
      'id': 216141,
      'mediaType': <ResultMediaType.MOVIE: 'movie'>,
      'media_info': None,
      'media_type': <ResultMediaType.MOVIE: 'movie'>,
      'original_language': 'en',
      'original_title': 'Doctor Strain the Body Snatcher',
      'overview': 'Positively torturous, undecipherable shambles of a horror film concerns the titular doctor and his nephew as they incautiously revive corpses in their basement laboratory.',
      'popularity': 0.479,
      'title': 'Doctor Strain the Body Snatcher',
    }),
    dict({
      'first_air_date': datetime.date(1995, 11, 10),
      'id': 69019,
      'mediaType': <ResultMediaType.TV: 'tv'>,
      'media_info': None,
      'media_type': <ResultMediaType.TV: 'tv'>,
      'name': 'Strain of Blood',
      'original_language': 'th',
      'original_name': 'สายโลหิต',
      'overview': "Krai comes from a family of soldiers and has spent most of his life fighting in battles and wars for his country. Dao is the youngest daughter of a prominent village chief, who is very curious and happy go lucky as a youngster. Krai's older brother marries Dao's older sister, sealing the connection between both families. Krai meets Dao as a young girl and he spends a lot of time taking care of her, buying her toys and taking her on village outings with him to the market. Krai and his older brother are called away to defend the border and he promises Dao that he will return to take care of her always as an older brother. Years later, Krai comes back to realize that Dao has grown into a young beautiful maiden and the good feelings that both had for each other from years ago resurface into true love.",
      'popularity': 10.02,
    }),
    dict({
      'first_air_date': datetime.date(2006, 11, 1),
      'id': 31715,
      'mediaType': <ResultMediaType.TV: 'tv'>,
      'media_info': None,
      'media_type': <ResultMediaType.TV: 'tv'>,
      'name': 'Strain: Strategic Armored Infantry',
      'original_language': 'ja',
      'original_name': '奏光のストレイン',
      'overview': 'In the distant future, mankind is divided into two factions: Union and Deague. They have waged a war against each other for so long that no one remembers when it first began.Sara Werec, the daughter of a respectable family, is a 16-year old girl who attends a Space Academy where she is training to become a pilot. Her brother, Ralph Werec, had been sent to the frontline to accomplish a special mission when she was 11 years old. The two of them had lost their parents when they were young and the bond between the two is very close. It is Sara’s dearest wish to be reunited with her brother. To do that, she must travel to the battlefield where he is.One day, Sara’s planet is suddenly assaulted by Deague forces. To her surprise, her brother, Ralph, turns out to be one of the raiders who successfully kidnap a mysterious girl sleeping in a capsule.',
      'popularity': 12.867,
    }),
  ])
# ---
